# Graphics-Engine-for-Live-AR-Effects

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  test  test.cpp
include/glad/: glad.h
shaders/: base.vert  invert.frag  wave.frag
src/: Engine.cpp  Engine.hpp  Metrics.cpp  Metrics.hpp  Plugin.cpp  Plugin.hpp  Shader.cpp  Shader.hpp  glad.c  main.cpp  metrics.txt
